--- a/styles.css
+++ b/styles.css
@@ -96,5 +96,5 @@
             }
             .searchSection{
                 display: flex;
-                justify-content: space-between;
+                justify-content: space-around;
             }
