--- a/styles.css
+++ b/styles.css
@@ -98,3 +98,7 @@
                 display: flex;
                 justify-content: space-around;
             }
+            img.filter{
+                display: flex;
+                justify-content: space-around;
+            }
