--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@
             .searchSection{
                 display: flex;
                 justify-content: space-around;
+                padding-bottom: 20px;
             }
             img.filter{
                 display: flex;
