--- a/styles.css
+++ b/styles.css
@@ -1,105 +1,206 @@
- html{
-                width: 412px;
-            }
+            @import url('https://fonts.googleapis.com/css2?family=Sunshiney&display=swap');
             .header{
-                height: 80px;
-                width: 412px;
                 background-color: #EFD896;
                 display: flex;
                 justify-content: space-between;
             }
+            .logo{
+                width: 402px;
+                height: 152px;
+            }
+            .profile{
+                width: 148px;
+                height: 140px;
+            }
             .menu{
                 display: flex;
-                justify-content: center;
-                padding-top: 10px;
-                padding-bottom: 10px;
+                justify-content: space-between;
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+            img.back{
+                width: 80px;
+                height: 80px;
+            }
+            img.next{
+                width: 80px;
+                height: 80px;
             }
             .menubtn{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 100px;
-                height: 40px;
-                border-radius: 14px;
+                width: 200px;
+                height: 90px;
+                border-radius: 28px;
+                font-size: 48px;
+                font-family: "Sunshiney", cursive;
             }
             .menuRow1{
                 display: flex;
                 justify-content: space-around;
-                padding-bottom: 5px;
+                padding-bottom: 10px;
             }
             .menuRow2{
               display: flex;
               justify-content: space-around; 
-              padding-bottom: 15px; 
+              padding-bottom: 30px; 
             }
             .veganBurger{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 125px;
-                height: 40px;
-                border-radius: 5px;
+                width: 280px;
+                height: 90px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
             .chickenBurger{
                 cursor: pointer;
                 background-color: #DAD0AA;
-                width: 125px;
-                height: 40px;
-                border-radius: 5px;
+                width: 320px;
+                height: 90px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
             .hamburger{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 112px;
-                height: 40px;
-                border-radius: 5px;
+                width: 230px;
+                height: 90px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
             .fingerFood{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 114px;
-                height: 40px;
-                border-radius: 5px;
+                width: 320px;
+                height: 90px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
              .beverages{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 102px;
-                height: 40px;
-                border-radius: 5px;
+                width: 220px;
+                height: 80px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
             .dessert{
                 cursor: pointer;
                 background-color: #EFD896;
-                width: 100px;
-                height: 40px;
-                border-radius: 5px;
+                width: 230px;
+                height: 90px;
+                border-radius: 10px;
+                font-size: 40px;
+                font-family: "Sunshiney", cursive;
             }
             .searchBar{
-                height: 40px;
-                width: 312px;
+                height: 80px;
+                width: 650px;
                 background-color: #EFD896;
                 display: flex;
                 justify-content: flex-start;
                 align-items: center;
-                border-radius: 12px;
+                border-radius: 24px;
             }
             img.searchicon{
                 display: flex;
                 justify-content: space-between;
-                width: 25px;
-                height: 25px;
-                padding-right: 5px;
-                padding-left: 5px;
+                width: 50px;
+                height: 50px;
+                padding-right: 10px;
+                padding-left: 10px;
             }
             .searchtext{
                 display: flex;
                 justify-content: space-between;
+                font-size: 30px;
+                font-family: "Sunshiney", cursive;
             }
             .searchSection{
                 display: flex;
                 justify-content: space-around;
-                padding-bottom: 20px;
+                padding-bottom: 40px;
             }
             img.filter{
                 display: flex;
                 justify-content: space-around;
+                width: 80px;
+                height: 80px;
+            }
+            .card-row{
+                display: flex;
+                justify-content: space-between;
+            }
+            .card{
+                width: 310px;
+                height: 530px;
+                padding-left: 10px;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
+            }
+            .card-img-top{
+                width: 310px;
+                height: 264px;
+                display: block;
+            }
+            .card-body{
+                background-color: #EFD896;
+                width: 310px;
+                height: 200px;
+                border-bottom-left-radius: 10px;
+                border-bottom-right-radius: 10px;
+                display: flex;
+                flex-direction: column;
+
+            }
+            .card-title{
+               font-size: 40px;
+               font-family: "Sunshiney", cursive; 
+               padding-left: 10px;
+            }
+            .card-text{
+                display: flex;
+                justify-content: space-between;
+                padding-bottom: 0px;
+                margin-top: auto;
+            }
+            .price{
+                font-size: 35px;
+                font-family: "Sunshiney", cursive;
+            }
+            .rating{
+                display: flex;
+                justify-content: center;
+                padding-top: 10px;
+            }
+            img.star{
+                width: 24px;
+                height: 24px;
+                padding-right: 5px;
+            }
+            .rate{
+                font-size: 20px;
+                font-family: "Sunshiney", cursive;
+            }
+            img.heart{
+                width: 40px;
+                height: 40px;
+            }
+            .AddtoCart{
+                display: flex;
+                justify-content: space-around;
+                width: 130px;
+                height: 40px;
+                border-bottom-right-radius: 10px;
+                border-top-left-radius: 10px;
+                font-size: 20px;
+                color: white;
+                background-color: black;
+                font-family: "Sunshiney", cursive;
             }
